--- a/index.html
+++ b/index.html
@@ -716,7 +716,7 @@
             <div class="col-six tab-full right footer-subscribe">
 
                 <h4>Get Notified</h4>
-                <p>Quia quo qui sed odit. Quaerat voluptas autem necessitatibus vitae aut non alias sed quia. Ut itaque enim optio ut excepturi deserunt iusto porro.</p>
+                <p>To get Newsletter Subscribe Here</p>
 
                 <div class="subscribe-form">
                     <form id="mc-form" class="group" novalidate="true">
