--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <!-- favicons
     ================================================== -->
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
-    <link rel="icon" href="images/favicon-32x32.png" type="image/x-icon">
+    <link rel="icon" href="images/favicon-192.png" type="image/x-icon">
 
 </head>
 
