--- a/index.html
+++ b/index.html
@@ -68,13 +68,13 @@
     
                 <ul class="header-nav__social">
                     <li>
-                        <a href="#"><i class="fa fa-facebook"></i></a>
+                        <a href="https://www.facebook.com/profile.php?id=61564046848862&mibextid=ZbWKwL"><i class="fa fa-facebook"></i></a>
                     </li>
                     <li>
                         <a href="#"><i class="fa fa-twitter"></i></a>
                     </li>
                     <li>
-                        <a href="#"><i class="fa fa-instagram"></i></a>
+                        <a href="https://www.instagram.com/fusionixagency/?utm_source=ig_web_button_share_sheet"><i class="fa fa-instagram"></i></a>
                     </li>
                     <li>
                         <a href="https://www.behance.net/farhadchaudhary1"><i class="fa fa-behance"></i></a>
@@ -140,13 +140,13 @@
 
         <ul class="home-social">
             <li>
-                <a href="#0"><i class="fa fa-facebook" aria-hidden="true"></i><span>Facebook</span></a>
+                <a href="https://www.facebook.com/profile.php?id=61564046848862&mibextid=ZbWKwL"><i class="fa fa-facebook" aria-hidden="true"></i><span>Facebook</span></a>
             </li>
             <li>
                 <a href="#0"><i class="fa fa-twitter" aria-hidden="true"></i><span>Twiiter</span></a>
             </li>
             <li>
-                <a href="#0"><i class="fa fa-instagram" aria-hidden="true"></i><span>Instagram</span></a>
+                <a href="https://www.instagram.com/fusionixagency/?utm_source=ig_web_button_share_sheet"><i class="fa fa-instagram" aria-hidden="true"></i><span>Instagram</span></a>
             </li>
             <li>
                 <a href="https://www.behance.net/farhadchaudhary1"><i class="fa fa-behance" aria-hidden="true"></i><span>Behance</span></a>
@@ -674,13 +674,13 @@
 
                     <ul class="contact-social">
                         <li>
-                            <a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a>
+                            <a href="https://www.facebook.com/profile.php?id=61564046848862&mibextid=ZbWKwL"><i class="fa fa-facebook" aria-hidden="true"></i></a>
                         </li>
                         <li>
                             <a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a>
                         </li>
                         <li>
-                            <a href="#"><i class="fa fa-instagram" aria-hidden="true"></i></a>
+                            <a href="https://www.instagram.com/fusionixagency/?utm_source=ig_web_button_share_sheet"><i class="fa fa-instagram" aria-hidden="true"></i></a>
                         </li>
                         <li>
                             <a href="https://www.behance.net/farhadchaudhary1"><i class="fa fa-behance" aria-hidden="true"></i></a>
